JenkinsPractice_15th_July_2020

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,8 +11,78 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>TC_0005_FlightbookingjourneywithPaxmandatoryfieldvalidation</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0018_bookingDetailswithPremiumEcomomy</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0009_arrival_dateChanging_FromTopOptions</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0001_bookingSingleRoomWithThreeAdults</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>TC_0006_bookingFlightsWithmultipleCities</td>
 <td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0020_withoutAirBookingForMultipleCity</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0007_bookingFlightAndTwoRoomsWithAdultsAndChilds_FromTopDealPackages</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0019_withoutAirBookingForSingleCity</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0002_bookingSingleRoomtwoAdultOneChild</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0017_validateTripSummarywithMultipleCitiesforExploreAsiaPage</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0021_tripSummarymultipleCities</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0004_bookingFlightAndSingleRoomWithTwoAdults_FromFirstPackages</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0008_bookingFlightMultipleCitiesAndTwoRoomsWithAdultsAndChilds_FromEuropePage</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0003_bookingTwoRoomThreeAdultAndOneChildWithMultipleCities</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0014_verifySpotlightLink</td>
+<td>regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
