--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,6 +4,62 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>com.tripmasters.framework.testScript.HomePageTestScript</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0016_verifyFooterText</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0012_verifyOtherVacationPackages</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0013_verifyPopularVacationPackages</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0010_verifyCity</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0015_verifyStartAgainLink</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0011_verifyMoreHighlightAndAttractionLinks</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>com.tripmasters.framework.testScript.BookingPageTestScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -17,12 +73,12 @@
 <tr>
 <td>&nbsp;</td>
 <td>TC_0018_bookingDetailswithPremiumEcomomy</td>
-<td>smok </td>
+<td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>TC_0009_arrival_dateChanging_FromTopOptions</td>
-<td>smok </td>
+<td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -42,7 +98,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>TC_0007_bookingFlightAndTwoRoomsWithAdultsAndChilds_FromTopDealPackages</td>
-<td>smok </td>
+<td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -57,12 +113,12 @@
 <tr>
 <td>&nbsp;</td>
 <td>TC_0017_validateTripSummarywithMultipleCitiesforExploreAsiaPage</td>
-<td>smok </td>
+<td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>TC_0021_tripSummarymultipleCities</td>
-<td>smok </td>
+<td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -72,7 +128,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>TC_0008_bookingFlightMultipleCitiesAndTwoRoomsWithAdultsAndChilds_FromEuropePage</td>
-<td>smok </td>
+<td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
