--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,94 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd936a">  <td>20/05/28 11:21:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0006_bookingFlightsWithmultipleCities(java.lang.reflect.Method)[pri:6, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2f8f5f62]">TC_0006_bookingFlightsWithmultipleCities</td> 
-  <td>main@912011468</td>   <td></td> </tr>
-<tr bgcolor="74868d">  <td>20/05/28 11:20:42</td>   <td>-21767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2f8f5f62]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@912011468</td>   <td></td> </tr>
-<tr bgcolor="74868d">  <td>20/05/28 11:24:44</td>   <td>220696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2f8f5f62]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@912011468</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0001_bookingSingleRoomWithThreeAdults(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0001_bookingSingleRoomWithThreeAdults</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:43</td>   <td>422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0002_bookingSingleRoomtwoAdultOneChild(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0002_bookingSingleRoomtwoAdultOneChild</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:43</td>   <td>472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0003_bookingTwoRoomThreeAdultAndOneChildWithMultipleCities(java.lang.reflect.Method)[pri:3, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0003_bookingTwoRoomThreeAdultAndOneChildWithMultipleCities</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:43</td>   <td>521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0004_bookingFlightAndSingleRoomWithTwoAdults_FromFirstPackages(java.lang.reflect.Method)[pri:4, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0004_bookingFlightAndSingleRoomWithTwoAdults_FromFirstPackages</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:43</td>   <td>572</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0005_FlightbookingjourneywithPaxmandatoryfieldvalidation(java.lang.reflect.Method)[pri:5, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0005_FlightbookingjourneywithPaxmandatoryfieldvalidation</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:43</td>   <td>603</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0006_bookingFlightsWithmultipleCities(java.lang.reflect.Method)[pri:6, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0006_bookingFlightsWithmultipleCities</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>10649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0007_bookingFlightAndTwoRoomsWithAdultsAndChilds_FromTopDealPackages(java.lang.reflect.Method)[pri:7, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0007_bookingFlightAndTwoRoomsWithAdultsAndChilds_FromTopDealPackages</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>10672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0008_bookingFlightMultipleCitiesAndTwoRoomsWithAdultsAndChilds_FromEuropePage(java.lang.reflect.Method)[pri:8, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0008_bookingFlightMultipleCitiesAndTwoRoomsWithAdultsAndChilds_FromEuropePage</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>10709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0009_arrival_dateChanging_FromTopOptions(java.lang.reflect.Method)[pri:9, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0009_arrival_dateChanging_FromTopOptions</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>10735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0014_verifySpotlightLink(java.lang.reflect.Method)[pri:14, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0014_verifySpotlightLink</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>10790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0017_validateTripSummarywithMultipleCitiesforExploreAsiaPage(java.lang.reflect.Method)[pri:17, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0017_validateTripSummarywithMultipleCitiesforExploreAsiaPage</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>10819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0018_bookingDetailswithPremiumEcomomy(java.lang.reflect.Method)[pri:18, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0018_bookingDetailswithPremiumEcomomy</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>10842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0019_withoutAirBookingForSingleCity(java.lang.reflect.Method)[pri:19, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0019_withoutAirBookingForSingleCity</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>10867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0020_withoutAirBookingForMultipleCity(java.lang.reflect.Method)[pri:20, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0020_withoutAirBookingForMultipleCity</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>10931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0021_tripSummarymultipleCities(java.lang.reflect.Method)[pri:21, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0021_tripSummarymultipleCities</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:42</td>   <td>-511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>449</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10677</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10826</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>430</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>586</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10741</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>10944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
 </table>
