--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,94 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74868d">  <td>20/05/28 11:20:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2f8f5f62]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@912011468</td>   <td></td> </tr>
-<tr bgcolor="bd936a">  <td>20/05/28 11:21:04</td>   <td>21767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0006_bookingFlightsWithmultipleCities(java.lang.reflect.Method)[pri:6, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2f8f5f62]">TC_0006_bookingFlightsWithmultipleCities</td> 
-  <td>main@912011468</td>   <td></td> </tr>
-<tr bgcolor="74868d">  <td>20/05/28 11:24:44</td>   <td>242463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2f8f5f62]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@912011468</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:42</td>   <td>511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0001_bookingSingleRoomWithThreeAdults(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0001_bookingSingleRoomWithThreeAdults</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>889</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:43</td>   <td>933</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0002_bookingSingleRoomtwoAdultOneChild(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0002_bookingSingleRoomtwoAdultOneChild</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:43</td>   <td>983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0003_bookingTwoRoomThreeAdultAndOneChildWithMultipleCities(java.lang.reflect.Method)[pri:3, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0003_bookingTwoRoomThreeAdultAndOneChildWithMultipleCities</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:43</td>   <td>1032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0004_bookingFlightAndSingleRoomWithTwoAdults_FromFirstPackages(java.lang.reflect.Method)[pri:4, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0004_bookingFlightAndSingleRoomWithTwoAdults_FromFirstPackages</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>1048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>1056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:43</td>   <td>1083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0005_FlightbookingjourneywithPaxmandatoryfieldvalidation(java.lang.reflect.Method)[pri:5, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0005_FlightbookingjourneywithPaxmandatoryfieldvalidation</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>1097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:43</td>   <td>1100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:43</td>   <td>1114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0006_bookingFlightsWithmultipleCities(java.lang.reflect.Method)[pri:6, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0006_bookingFlightsWithmultipleCities</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>11160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0007_bookingFlightAndTwoRoomsWithAdultsAndChilds_FromTopDealPackages(java.lang.reflect.Method)[pri:7, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0007_bookingFlightAndTwoRoomsWithAdultsAndChilds_FromTopDealPackages</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>11183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0008_bookingFlightMultipleCitiesAndTwoRoomsWithAdultsAndChilds_FromEuropePage(java.lang.reflect.Method)[pri:8, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0008_bookingFlightMultipleCitiesAndTwoRoomsWithAdultsAndChilds_FromEuropePage</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>11220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0009_arrival_dateChanging_FromTopOptions(java.lang.reflect.Method)[pri:9, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0009_arrival_dateChanging_FromTopOptions</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>11246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0014_verifySpotlightLink(java.lang.reflect.Method)[pri:14, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0014_verifySpotlightLink</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>11301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0017_validateTripSummarywithMultipleCitiesforExploreAsiaPage(java.lang.reflect.Method)[pri:17, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0017_validateTripSummarywithMultipleCitiesforExploreAsiaPage</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>11330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0018_bookingDetailswithPremiumEcomomy(java.lang.reflect.Method)[pri:18, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0018_bookingDetailswithPremiumEcomomy</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>11353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0019_withoutAirBookingForSingleCity(java.lang.reflect.Method)[pri:19, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0019_withoutAirBookingForSingleCity</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>11378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0020_withoutAirBookingForMultipleCity(java.lang.reflect.Method)[pri:20, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0020_withoutAirBookingForMultipleCity</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="657fa3">  <td>20/07/07 20:27:53</td>   <td>11442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0021_tripSummarymultipleCities(java.lang.reflect.Method)[pri:21, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">TC_0021_tripSummarymultipleCities</td> 
+  <td>main@1058876963</td>   <td></td> </tr>
+<tr bgcolor="88af83">  <td>20/07/07 20:27:53</td>   <td>11455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@7dc19a70]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1058876963</td>   <td></td> </tr>
 </table>
